--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 
-<img src="smile_color.jpg" style="max-width:35%;min-width:40px;float:right;"/>
+<img src="barros_MG_4817s2-min.jpg" style="max-width:35%;min-width:40px;float:right;"/>
 <h1>Gastón P. Fernández</h1>
 <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></p>
 <h2 id="work-in-progress">work in progress:</h2>
