--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </ul>
 
 
-        <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="Publications">
+        <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="research">
   <div class="my-auto" id="projects-content">
     <div class=" pb-2 pt-3">
       <h2>Publications <span><div class="subheading"> (<em>including forthcoming papers</em>)</div></span></h2> 
