--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       
       <li><a href="/">home</a></li>
 
-      <li><a href="/">research</a></li>	    
+      <li><a href="/research.html">research</a></li>    
 	
       <li><a href="/files/CV_GastonFernandezBarros.pdf" target="_blank">cv</a></li>
       
