--- a/research.html
+++ b/research.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Research | Gastón P. Fernández</title>
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/fonts.css" />
+</head>
+<body>
+  <!-- Simplified for brevity -->
+  <nav>
+    <ul class="menu">
+      <li><a href="/">home</a></li>
+      <li><a href="/research.html">research</a></li>
+      <li><a href="/files/CV_GastonFernandezBarros.pdf" target="_blank">cv</a></li>
+    </ul>
+    <hr/>
+  </nav>
+
+  <!-- Insert your research content here -->
+  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="Publications">
+    <!-- Publications content copied from your main page -->
+  </section>
+
+  <footer>
+    <hr/>
+    © Gastón P. Fernández
+  </footer>
+</body>
+</html>
 
