--- a/research.html
+++ b/research.html
@@ -19,23 +19,19 @@
   </nav>
 
   <!-- Insert your research content here -->
+<h2 id="publications">publications:</h2>
+<ul>
+<li><a href="https://www.sciencedirect.com/science/article/pii/S0167268123001531" target="_blank">2. Artificial intelligence and firm-level productivity</a> <strong>Journal of Economic Behavior & Organization</strong>, Volume 211, July 2023, Pages 188-205</div></li>
+</ul>
+  
 <h2 id="work-in-progress">work in progress:</h2>
 <ul>
 <li>&ldquo;A many item analysis of a linear regression with sum scores as regressors&rdquo;</li>
 <li>&ldquo;Estimation of the interactive fixed effects model with a short panel&rdquo; (with Bob Phillips)</li>
 <li>&ldquo;Large T Nonparametric Identification of Binary Choice Panel Data Model&rdquo;</li>
 <li>&ldquo;A nonparametric analysis of roll call voting&rdquo;</li>
-</ul>
-<h2 id="publications">publications:</h2>
-<ul>
-<li>(2021) &ldquo;The Econometrics of Early Childhood Human Capital and Investments&rdquo; (with <a href="https://www.flaviocunha.com/">Flavio Cunha</a> and <a href="https://sites.google.com/site/ericnielsenecon/home">Eric Nielsen</a>) <em>Annual Review of Economics</em> (<a href="https://doi.org/10.1146/annurev-economics-080217-053409">published version</a>, <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3903097">SSRN</a>)</li>
-<li>(2021) &ldquo;Minimum wage and women&rsquo;s decision making power within households: Evidence from Indonesia&rdquo; (with <a href="https://www.econjin.com/">Jin Ho Kim</a>) <em>Economic Development and Cultural Change</em> (<a href="https://doi.org/10.1086/711172">published version</a></li>
-<li>(2020) &ldquo;Nonparametric Identification of Discrete Choice Models with Lagged Dependent Variables&rdquo; <em>Journal of Econometrics</em> (<a href="https://doi.org/10.1016/j.jeconom.2019.08.005">published version</a>, <a href="smallTbinarypanel_022619.pdf">working paper</a>)</li>
-<li>(2020) &ldquo;Identification of the linear factor model&rdquo; <em>Econometric Reviews</em> (<a href="https://doi.org/10.1080/07474938.2018.1550042">published version</a>, <a href="linearfactormodels052918_wfigs.pdf">working paper</a>, <a href="linearfactormodels_supplementary_appendix_060418.pdf">supplementary appendix</a>)</li>
-<li>(2019) &ldquo;The Repeat Time-on-the-Market Index&rdquo; (with <a href="https://sites.google.com/view/paulernestocarrillo/home">Paul Carrillo</a>) <em>Journal of Urban Economics</em> (<a href="https://doi.org/10.1016/j.jue.2019.04.005">published version</a>, <a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2584558">SSRN</a>)</li>
-<li>(2019) &ldquo;Controlling for ability using test scores&rdquo; <em>Journal of Applied Econometrics</em> (<a href="https://doi.org/10.1002/jae.2683">published version</a>, <a href="tsregressions_061218_all.pdf">working paper</a>)</li>
-<li>(2019) &ldquo;Identification of a Nonseparable Model under Endogeneity using Binary Proxies for Unobserved Heterogeneity&rdquo; <em>Quantitative Economics</em> (<a href="https://doi.org/10.3982/QE674">published version</a>, <a href="binary_measmnt_QE_revisions_060618_all.pdf">working paper</a>, <a href="binary_measmnt_QE_resubmit_supplementary_appendix_060618_all.pdf">supplementary appendix</a>)</li>
-<li>(2011) Quantifying the failure of bootstrap likelihood ratio tests (with Mathias Drton) <em>Biometrika</em> (<a href="https://doi.org/10.1093/biomet/asr033">published version</a>)
+
+
 </br>
 </br>
 </br>
