--- a/research.html
+++ b/research.html
@@ -19,17 +19,13 @@
   </nav>
 
   <!-- Insert your research content here -->
-<h2 id="publications">publications:</h2>
+<h2 id="publications">publications (<em>including forthcoming papers</em>):</h2>
 <ul>
 <li><a href="https://www.sciencedirect.com/science/article/pii/S0167268123001531" target="_blank">2. Artificial intelligence and firm-level productivity</a> <strong>Journal of Economic Behavior & Organization</strong>, Volume 211, July 2023, Pages 188-205</div></li>
 </ul>
   
-<h2 id="work-in-progress">work in progress:</h2>
+<h2 id="work-in-progress">work in progress (<em>including working papers</em>):</h2>
 <ul>
-<li>&ldquo;A many item analysis of a linear regression with sum scores as regressors&rdquo;</li>
-<li>&ldquo;Estimation of the interactive fixed effects model with a short panel&rdquo; (with Bob Phillips)</li>
-<li>&ldquo;Large T Nonparametric Identification of Binary Choice Panel Data Model&rdquo;</li>
-<li>&ldquo;A nonparametric analysis of roll call voting&rdquo;</li>
 
 
 </br>
