--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
       <li><a href="/">home</a></li>
 
       <li><a href="/research.html">research</a></li>    
+
+      <li><a href="/teaching.html">teaching</a></li>   
 	
       <li><a href="/files/CV_GastonFernandezBarros.pdf" target="_blank">cv</a></li>
+      
+      <li><a href="/teaching.html">contact</a></li>   	    	    
       
     </ul>
     <hr/>
