--- a/research.html
+++ b/research.html
@@ -19,12 +19,12 @@
   </nav>
 
   <!-- Insert your research content here -->
-<h2 id="publications">publications (<em>including forthcoming papers</em>):</h2>
+<h2 id="publications">publications<span><div class="subheading"> (<em>including forthcoming papers</em>)</div></span>:</h2>
 <ul>
 <li><a href="https://www.sciencedirect.com/science/article/pii/S0167268123001531" target="_blank">2. Artificial intelligence and firm-level productivity</a> <strong>Journal of Economic Behavior & Organization</strong>, Volume 211, July 2023, Pages 188-205</div></li>
 </ul>
   
-<h2 id="work-in-progress">work in progress (<em>including working papers</em>):</h2>
+<h2 id="work-in-progress">work in progress <span><div class="subheading"> (<em>including working papers</em>)</div></span>:</h2>
 <ul>
 
 
