--- a/research.html
+++ b/research.html
@@ -29,9 +29,12 @@
   <!-- Insert your research content here -->
 <h2 id="publications">publications:<span><div class="subheading"> (<em>including forthcoming papers</em>)</div></span></h2>
 
-<p> 2. <a href="https://www.sciencedirect.com/science/article/pii/S0167268123001531" target="_blank"> Artificial intelligence and firm-level productivity</a>  </p>
-<p> <strong>Journal of Economic Behavior & Organization</strong>, Volume 211, July 2023, Pages 188-205.  </p>
-<p> Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://scholar.google.com/citations?user=IlD-eSgAAAAJ&hl=en" target="_blank">Christian Rammer </a></p>
+ <div class="pubthumb">
+<img src="/files/jebo_cover.jpg">
+</div>	
+<p> 2. <a href="https://www.sciencedirect.com/science/article/pii/S0167268123001531" target="_blank"> Artificial intelligence and firm-level productivity</a>  
+<strong>Journal of Economic Behavior & Organization</strong>, Volume 211, July 2023, Pages 188-205. 
+Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://scholar.google.com/citations?user=IlD-eSgAAAAJ&hl=en" target="_blank">Christian Rammer </a></p>
 
 <p> </p><a href="https://www.sciencedirect.com/science/article/pii/S0167268123001531" target="_blank">2. Artificial intelligence and firm-level productivity</a> <strong>Journal of Economic Behavior & Organization</strong>, Volume 211, July 2023, Pages 188-205</div></p>
 
