--- a/research.html
+++ b/research.html
@@ -29,14 +29,20 @@
   <!-- Insert your research content here -->
 <h2 id="publications">publications:<span><div class="subheading"> (<em>including forthcoming papers</em>)</div></span></h2>
 
- <div class="pubthumb">
+	
+<div class="pubthumb">
 <img src="/files/jebo_cover.jpg">
 </div>	
-<p> 2. <a href="https://www.sciencedirect.com/science/article/pii/S0167268123001531" target="_blank"> Artificial intelligence and firm-level productivity</a>  
-<strong>Journal of Economic Behavior & Organization</strong>, Volume 211, July 2023, Pages 188-205. 
+<p> <a href="https://www.sciencedirect.com/science/article/pii/S0167268123001531" target="_blank"> Artificial intelligence and firm-level productivity</a>  <br>
+<strong>Journal of Economic Behavior & Organization</strong>, Volume 211, July 2023, Pages 188-205. <br>
 Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://scholar.google.com/citations?user=IlD-eSgAAAAJ&hl=en" target="_blank">Christian Rammer </a></p>
 
-<p> </p><a href="https://www.sciencedirect.com/science/article/pii/S0167268123001531" target="_blank">2. Artificial intelligence and firm-level productivity</a> <strong>Journal of Economic Behavior & Organization</strong>, Volume 211, July 2023, Pages 188-205</div></p>
+<div class="pubthumb">
+<img src="/files/respo_cover.jpg">
+</div>	
+<p> <a href="https://www.sciencedirect.com/science/article/pii/S0048733322000798" target="_blank">1. Artificial intelligence and industrial innovation: Evidence from German firm-level data</a><br>
+<strong>Research Policy</strong>, Volume 51, Issue 7, September 2022, 104555<br>
+Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://scholar.google.com/citations?user=IlD-eSgAAAAJ&hl=en" target="_blank">Christian Rammer</a></p>
 
   
 <h2 id="work-in-progress">work in progress: <span><div class="subheading"> (<em>including working papers</em>)</div></span></h2>
