--- a/research.html
+++ b/research.html
@@ -37,7 +37,8 @@
 <a href="https://www.sciencedirect.com/science/article/pii/S0167268123001531" target="_blank"> Artificial intelligence and firm-level productivity</a>  <br>
 <strong>Journal of Economic Behavior & Organization</strong>, Volume 211, July 2023, Pages 188-205 <br>
 Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://scholar.google.com/citations?user=IlD-eSgAAAAJ&hl=en" target="_blank">Christian Rammer </a> <br>
-<span style="font-size: 80%;">Abstract · <a href="/files/JEBO2023.txt">Cite</a>  · <a href="/files/JEBO2023.pdf">PDF</a>  </span>
+<span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract1')">Abstract</a> · <a href="/files/JEBO2023.txt" target="_blank">Cite</a>  · <a href="/files/JEBO2023.pdf" target="_blank">PDF</a>  </span>
+<div id="abstract1" style="display:none; font-size: 80%;">This is the abstract of the paper. It is initially hidden and will be shown when the 'Abstract' link is clicked.</div>	
 </p>
 
 <br>
@@ -55,7 +56,16 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 </br>
 </br> 
 <h2 id="work-in-progress">work in progress: <span><div class="subheading"> (<em>including working papers</em>)</div></span></h2>
-
+<script>
+function toggleAbstract(abstractId) {
+  var x = document.getElementById(abstractId);
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+}
+</script>
 
 
 </br>
