--- a/research.html
+++ b/research.html
@@ -6,6 +6,18 @@
   <title>Research | Gastón P. Fernández</title>
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/fonts.css" />
+
+<!-- Toggle abstract -->	
+<script>
+function toggleAbstract(abstractId) {
+  var x = document.getElementById(abstractId);
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+}
+</script>	
 </head>
 <body>
   <!-- Simplified for brevity -->
@@ -56,17 +68,12 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 </br>
 </br> 
 <h2 id="work-in-progress">work in progress: <span><div class="subheading"> (<em>including working papers</em>)</div></span></h2>
-<script>
-function toggleAbstract(abstractId) {
-  var x = document.getElementById(abstractId);
-  if (x.style.display === "none") {
-    x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
-}
-</script>
 
+<p> 	
+<a>Does personality affect the allocation of resources within households?</a><br>
+<div class="subheading"> <em>Presented at: EALE 2023, EEA-ESEM 2023, ESPE 2023, TADC 2023, ECORES Summer School 2022 </em></div><br>
+<span style="font-size: 18px"><b> Status:  <a class="two" href="/files/20231020_GastonFernandez_LE.pdf" target="_blank">working paper &#128196 </a> - submitted</em> </em></b></span>
+</p>
 
 </br>
 </br>
