--- a/research.html
+++ b/research.html
@@ -71,8 +71,8 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 
 <p> 	
 <a>Does personality affect the allocation of resources within households?</a><br>
-<div class="subheading"> <em>Presented at: EALE 2023, EEA-ESEM 2023, ESPE 2023, TADC 2023, ECORES Summer School 2022 </em></div><br>
-<span style="font-size: 18px"><b> Status:  <a class="two" href="/files/20231020_GastonFernandez_LE.pdf" target="_blank">working paper &#128196 </a> - submitted</em> </em></b></span>
+<em>Presented at: EALE 2023, EEA-ESEM 2023, ESPE 2023, TADC 2023, ECORES Summer School 2022 </em><br>
+<span style="font-size: 80%;">Status: <a class="two" href="/files/20231020_GastonFernandez_LE.pdf" target="_blank">working paper &#128196 </a> · Submitted </span>
 </p>
 
 </br>
