--- a/research.html
+++ b/research.html
@@ -70,7 +70,7 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 <h2 id="work-in-progress">work in progress: <span><div class="subheading"> (<em>including working papers</em>)</div></span></h2>
 
 <p> 	
-<a>Does personality affect the allocation of resources within households?</a><br>
+<strong>Does personality affect the allocation of resources within households?</strong>strong><br>
 <em>Presented at: EALE 2023, EEA-ESEM 2023, ESPE 2023, TADC 2023, ECORES Summer School 2022 </em><br>
 <span style="font-size: 80%;">Status: <a class="two" href="/files/20231020_GastonFernandez_LE.pdf" target="_blank">working paper &#128196 </a> · Submitted </span>
 </p>
