--- a/research.html
+++ b/research.html
@@ -70,11 +70,18 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 <h2 id="work-in-progress">work in progress: <span><div class="subheading"> (<em>including working papers</em>)</div></span></h2>
 
 <p> 	
-<strong>Does personality affect the allocation of resources within households?</strong>strong><br>
+<strong>Does personality affect the allocation of resources within households?</strong><br>
 <em>Presented at: EALE 2023, EEA-ESEM 2023, ESPE 2023, TADC 2023, ECORES Summer School 2022 </em><br>
 <span style="font-size: 80%;">Status: <a class="two" href="/files/20231020_GastonFernandez_LE.pdf" target="_blank">working paper &#128196 </a> · Submitted </span>
 </p>
-
+&nbsp;
+<p> 	
+Evidence on the adoption of artificial intelligence: the role of skills shortage in German firms</strong><br>
+Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00144520" target="_blank">Paolo Carioli</a> <br>	
+<em>Presented at: CISS 2023  </em><br>
+<span style="font-size: 80%;">Status: working paper soon </a> · Submitted </span>
+</p>
+	
 </br>
 </br>
 </br>
@@ -88,7 +95,7 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 </br>
   <footer>
     <hr/>
-    © Gastón P. Fernández
+    © Gastón P. Fernández, 2024
   </footer>
 </body>
 </html>
