--- a/research.html
+++ b/research.html
@@ -76,14 +76,14 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 </p>
 
 <p> 	
-Evidence on the adoption of artificial intelligence: the role of skills shortage in German firms</strong><br>
+<strong>Evidence on the adoption of artificial intelligence: the role of skills shortage in German firms</strong><br>
 Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00144520" target="_blank">Paolo Carioli</a> <br>	
 <em>Presented at: CISS 2023  </em><br>
 <span style="font-size: 80%;">Status: working paper soon </a> · Submitted </span>
 </p>
 
 <p> 	
-Personality traits, the marriage market, and household behavior</strong><br>
+<strong>Personality traits, the marriage market, and household behavior</strong><br>
 Joint with <a class="two" href="https://www.mariiakovaleva.com/index.html" target="_blank">Mariia Kovaleva</a><br>	
 <em>Presented at: Belgian Day Labour Economists 2023, Workshop on Dynamic Macroeconomics 2023, Household Economics Gathering 2023, ENTER Jamboree 2023  </em><br>
 <span style="font-size: 80%;">Status: draft soon </a> </span>
