--- a/research.html
+++ b/research.html
@@ -89,7 +89,23 @@ Joint with <a class="two" href="https://www.mariiakovaleva.com/index.html" targe
 <span style="font-size: 80%;">Status: draft soon </a> </span>
 </p>
 
+<p> 	
+<strong>Artificial Intelligence and the demand for labor: Evidence from German firm-level</strong><br>
+Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://scholar.google.com/citations?user=9zXMofcAAAAJ&hl=en" target="_blank">Bettina Peters</a><br>	
+<em>Presented at: Workshop on the Economics of Innovation 2023, ZEW/MaCCI 2022</em><br>
+<span style="font-size: 80%;">Status: draft soon </a> </span>
+</p>
 
+<p> 	
+<strong>Parental personality and child skills formation</strong><br>
+<span style="font-size: 80%;">Status: draft soon </a> </span>
+</p>
+
+<p> 	
+<strong>The arguable evolution of Chilean income inequality</strong><br>
+Joint with <a class="two" href="https://scholar.google.com/citations?user=NyyKx1cAAAAJ&hl=en&oi=ao" target="_blank">Leonardo Cáceres</a><br>		
+<span style="font-size: 80%;">Status: draft soon </a> </span>
+</p>	
 	
 </br>
 </br>
