--- a/research.html
+++ b/research.html
@@ -39,7 +39,7 @@ function toggleAbstract(abstractId) {
   </nav>
 
   <!-- Insert your research content here -->
-<h2 id="publications">publications:<span><div class="subheading"> (<em>including forthcoming papers</em>)</div></span></h2>
+<h2 id="publications">Publications:<span><div class="subheading"> (<em>including forthcoming papers</em>)</div></span></h2>
 
 <p> 	
 <div class="pubthumb">
@@ -67,7 +67,7 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 
 </br>
 </br> 
-<h2 id="work-in-progress">work in progress: <span><div class="subheading"> (<em>including working papers</em>)</div></span></h2>
+<h2 id="work-in-progress">Work in progress: <span><div class="subheading"> (<em>including working papers</em>)</div></span></h2>
 
 <p> 	
 <strong>Does personality affect the allocation of resources within households?</strong><br>
