--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,16 @@
     </ul>
     <hr/>
   </nav>
+<h2 id="contact">Contact information:</h2>	
+
+<p>
+Postal address: 
+Department of Economics	
+Faculty of Economics and Business
+KU Leuven	
+3000 Leuven, Naamsestraat 69, box 3565	
+Belgium	
+</p>
 
 
   <footer>
