--- a/contact.html
+++ b/contact.html
@@ -28,15 +28,24 @@
 <h2 id="contact">Contact information:</h2>	
 
 <p>
-Postal address: 
-Department of Economics	
-Faculty of Economics and Business
-KU Leuven	
+<strong> Postal address:</strong> <br>
+Department of Economics	<br>
+Faculty of Economics and Business <br>
+KU Leuven	<br>
 3000 Leuven, Naamsestraat 69, box 3565	
 Belgium	
 </p>
 
+<p>
+<strong> Office number:</strong> <br>
+HOG 02.159 	
+</p>	
 
+<p>
+<strong> E-mail address:</strong> <br>
+<a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a>
+</p>	
+	
   <footer>
     <hr/>
     © Gastón P. Fernández
