--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	
       <li><a href="/files/CV_GastonFernandezBarros.pdf" target="_blank">cv</a></li>
       
-      <li><a href="/teaching.html">contact</a></li>   	    	    
+      <li><a href="/contact.html">contact</a></li>   	    	    
       
     </ul>
     <hr/>
