--- a/research.html
+++ b/research.html
@@ -32,7 +32,7 @@ function toggleAbstract(abstractId) {
 	
       <li><a href="/files/CV_GastonFernandezBarros.pdf" target="_blank">cv</a></li>
       
-      <li><a href="/teaching.html">contact</a></li>   	    	    
+      <li><a href="/contact.html">contact</a></li>   	    	    
       
     </ul>
     <hr/>
