--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 <img src="https://gaston-fernandez.github.io/files/barros_MG_4817s2-min.jpg" style="max-width:35%;min-width:40px;float:right;"/>
 <h1>Gastón P. Fernández</h1>
 
-	<p>I’m a Ph.D. student at the Economics Department of <span><b>KU Leuven</b></span>, Belgium. My advisors are <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><span><b>Laurens Cherchye</b></span></a> and <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><span><b>Frederic Vermeulen</b></span></a>. On February 2024, I will be visiting the Department of Econometrics & Operations Research at <span><b>Tilburg University</b></span>.</p>
+	<p>
+	I’m a Ph.D. student at the Economics Department of <span><b>KU Leuven</b></span>, Belgium. My advisors are <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><span><b>Laurens Cherchye</b></span></a> and <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><span><b>Frederic Vermeulen</b></span></a>. <br>
+	
+	Currently, I'm visiting the Department of Econometrics & Operations Research at <span><b>Tilburg University</b></span>.  <br>
+	</p>
          
         <p> My research is in applied microeconomics with a special emphasis on the fields of <span><b>Family Economics</b></span> and <span><b>Human Capital Development</b></span>. I am also interested in studying the impact of <span><b>Technological Change</b></span> on labor markets and firms’ behavior.</p>
 
