--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 <h1>Gastón P. Fernández</h1>
 
 	<p>
-	I’m a Ph.D. student at the Economics Department of <span><b>KU Leuven</b></span>, Belgium. My advisors are <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><span><b>Laurens Cherchye</b></span></a> and <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><span><b>Frederic Vermeulen</b></span></a>. <br>
+	I’m a Ph.D. student at the Economics Department of <span><b>KU Leuven</b></span>, Belgium. My advisors are <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><span><b>Laurens Cherchye</b></span></a> and <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><span><b>Frederic Vermeulen</b></span></a>. </p>
 	
-	Currently, I'm visiting the Department of Econometrics & Operations Research at <span><b>Tilburg University</b></span>.  <br>
-	</p>
-         
+	<p>
+	Currently, I'm visiting the Department of Econometrics & Operations Research at <span><b>Tilburg University</b></span>.  </p>
+	 
         <p> My research is in applied microeconomics with a special emphasis on the fields of <span><b>Family Economics</b></span> and <span><b>Human Capital Development</b></span>. I am also interested in studying the impact of <span><b>Technological Change</b></span> on labor markets and firms’ behavior.</p>
 
         <p>I will be on the <span><b>2024/2025 academic job market. </b></span></p>
