--- a/research.html
+++ b/research.html
@@ -52,7 +52,7 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 <div id="abstract1" style="display:none; font-size: 80%;">Artificial Intelligence (AI) is often regarded as the next general-purpose technology with a rapid, penetrating, and far-reaching use over a broad number of industrial sectors. The main feature of new general-purpose technology is to enable new ways of production that may increase productivity. However, to date, only a few studies have investigated the likely productivity effects of AI at the firm-level, presumably due to limited data availability. We exploit unique survey data on firms’ adoption of AI technology and estimate its productivity effects with a sample of German firms. We employ both a cross-sectional dataset and a panel database. To address the potential endogeneity of AI adoption, we also implement IV estimators. We find positive and significant associations between the use of AI and firm productivity. This finding holds for different measures of AI usage, i.e., an indicator variable of AI adoption, and the intensity with which firms use AI methods in their business processes.</div>	
 </p>
 
-&nbsp;
+<div class="tx-div medium clearfix" "></div><!-- end divider -->
 	
 <p> 	
 <div class="pubthumb">
