--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
 
 
-<img src="https://gaston-fernandez.github.io/files/barros_MG_4817s2-min.jpg" style="max-width:35%;min-width:40px;float:right;"/>
+
+<div style="margin-right: 20px;">	  
 <h1>Gastón P. Fernández</h1>
 
 	<p>
@@ -54,6 +55,8 @@
 	<p> &#128231 Reach me here: <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></p></p>  
 
 	<p><a href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank" class="button-round-x w-button"><strong class="bold-text-3">Download CV ↓</strong></a>  </p> 
+</div>
+<img src="https://gaston-fernandez.github.io/files/barros_MG_4817s2-min.jpg" style="max-width:35%;min-width:40px;float:right;"/>
 
 </br>
 </br>
