--- a/index.html
+++ b/index.html
@@ -103,6 +103,17 @@
   © Gastón P. Fernández, 2024
   
   </footer>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YH28BD7JPP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YH28BD7JPP');
+</script>
+	  
   </body>
 </html>
 
