--- a/contact.html
+++ b/contact.html
@@ -60,5 +60,15 @@ HOG 02.159
     <hr/>
     © Gastón P. Fernández
   </footer>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YH28BD7JPP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YH28BD7JPP');
+</script>
+	
 </body>
 </html>
