--- a/research.html
+++ b/research.html
@@ -122,6 +122,17 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=NyyKx1
     <hr/>
     © Gastón P. Fernández, 2024
   </footer>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YH28BD7JPP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YH28BD7JPP');
+</script>
+	
 </body>
 </html>
 
