--- a/teaching.html
+++ b/teaching.html
@@ -26,7 +26,37 @@
     <hr/>
   </nav>
 
- 
+<p>
+<strong>Economic Evaluation of Economic Policy</strong>	 <br>
+ KU Leuven	<br>
+T.A. for Prof. Frederic Vermeulen	<br>
+Graduate level<br>
+Spring 2023	
+</p>
+
+<p>
+<strong>Master's Thesis Advisor</strong>	 <br>
+ KU Leuven	<br>	
+Thesis advisor for Prof. Frederic Vermeulen and Prof. Laurens Cherchye	<br>
+Graduate level<br>
+2022 - present	
+</p>
+
+<p>
+<strong>Econometrics</strong>	 <br>
+Universidad Adolfo Ibañez <br>	
+T.A. for Prof. Julio Guzmán	<br>
+Undergraduate level<br>
+Spring 2014 and Fall 2014
+</p>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>	
 
   <footer>
     <hr/>
