--- a/teaching.html
+++ b/teaching.html
@@ -25,7 +25,7 @@
     </ul>
     <hr/>
   </nav>
-
+<h2 id="teaching">Teaching:</h2>	
 <p>
 <strong>Economic Evaluation of Economic Policy</strong>	 <br>
  KU Leuven	<br>
