--- a/research.html
+++ b/research.html
@@ -74,33 +74,38 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 <em>Presented at: EALE 2023, EEA-ESEM 2023, ESPE 2023, TADC 2023, ECORES Summer School 2022 </em><br>
 <span style="font-size: 80%;">Status: <a class="two" href="https://feb.kuleuven.be/research/economics/ces/documents/DPS/DPS2023/dps%202311.pdf" target="_blank">working paper </a> · Submitted </span>
 </p>
-
+<hr class="publication-divider">
+	
 <p> 	
 <strong>Evidence on the adoption of artificial intelligence: the role of skills shortage in German firms</strong><br>
 Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00144520" target="_blank">Paolo Carioli</a> <br>	
 <em>Presented at: CISS 2023  </em><br>
 <span style="font-size: 80%;">Status: working paper soon </a> · Submitted </span>
 </p>
-
+<hr class="publication-divider">
+	
 <p> 	
 <strong>Personality traits, the marriage market, and household behavior</strong><br>
 Joint with <a class="two" href="https://www.mariiakovaleva.com/index.html" target="_blank">Mariia Kovaleva</a><br>	
 <em>Presented at: Belgian Day Labour Economists 2023, Workshop on Dynamic Macroeconomics 2023, Household Economics Gathering 2023, ENTER Jamboree 2023  </em><br>
 <span style="font-size: 80%;">Status: draft soon </a> </span>
 </p>
-
+<hr class="publication-divider">
+	
 <p> 	
 <strong>Artificial Intelligence and the demand for labor: Evidence from German firm-level</strong><br>
 Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://scholar.google.com/citations?user=9zXMofcAAAAJ&hl=en" target="_blank">Bettina Peters</a><br>	
 <em>Presented at: Workshop on the Economics of Innovation 2023, ZEW/MaCCI 2022</em><br>
 <span style="font-size: 80%;">Status: draft soon </a> </span>
 </p>
-
+<hr class="publication-divider">
+	
 <p> 	
 <strong>Parental personality and child skills formation</strong><br>
 <span style="font-size: 80%;">Status: draft soon </a> </span>
 </p>
-
+<hr class="publication-divider">
+	
 <p> 	
 <strong>The arguable evolution of Chilean income inequality</strong><br>
 Joint with <a class="two" href="https://scholar.google.com/citations?user=NyyKx1cAAAAJ&hl=en&oi=ao" target="_blank">Leonardo Cáceres</a><br>		
