--- a/teaching.html
+++ b/teaching.html
@@ -33,7 +33,7 @@ T.A. for Prof. Frederic Vermeulen	<br>
 Graduate level<br>
 Spring 2023	
 </p>
-
+<hr class="publication-divider">
 <p>
 <strong>Master's Thesis Advisor</strong>	 <br>
  KU Leuven	<br>	
@@ -41,7 +41,7 @@ Thesis advisor for Prof. Frederic Vermeulen and Prof. Laurens Cherchye	<br>
 Graduate level<br>
 2022 - present	
 </p>
-
+<hr class="publication-divider">
 <p>
 <strong>Econometrics</strong>	 <br>
 Universidad Adolfo Ibañez <br>	
