--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </br>
 </br>	  
 <div class="div-block-9_2">
-<a href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao" target="_blank" class="social-icon-link w-inline-block">
+<a href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao" target="_blank" class="social-icon-link w-inline-block" style="text-decoration: none;">
 <img src="https://uploads-ssl.webflow.com/6254cb9c7e543d3ead6005fe/6254cb9c7e543d4f296006a4_google-scholar.png" width="28" alt=""/>
 </a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
