--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
 <img src="https://gaston-fernandez.github.io/files/barros_MG_4817s2-min.jpg" style="max-width:35%;min-width:40px;float:right;"/>
 
+<img src="https://gaston-fernandez.github.io/files/kul_logo.png" style="max-width:35%;min-width:40px;float:right;"/>
+
 <div style="margin-right: 50px;">	  
 <h1>Gastón P. Fernández</h1>
 
