--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
   <body>
     <nav>
+    <img src="https://gaston-fernandez.github.io/files/kul_logo.png" style="max-width:25%;min-width:30px;float:left;"/>
+	    
     <ul class="menu">
       
       <li><a href="/">home</a></li>
@@ -39,8 +41,6 @@
 
 
 <img src="https://gaston-fernandez.github.io/files/barros_MG_4817s2-min.jpg" style="max-width:35%;min-width:40px;float:right;"/>
-
-<img src="https://gaston-fernandez.github.io/files/kul_logo.png" style="max-width:35%;min-width:40px;float:right;"/>
 
 <div style="margin-right: 50px;">	  
 <h1>Gastón P. Fernández</h1>
