--- a/index.html
+++ b/index.html
@@ -40,15 +40,13 @@
 
 
 
-<div class="profile-and-socials">
-<img src="https://gaston-fernandez.github.io/files/barros_MG_4817s2-min.jpg" style="max-width:35%;min-width:40px;float:right;"/>
 
-<div class="div-block-9_2">
-<a href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao" target="_blank" class="social-icon-link w-inline-block" style="text-decoration: none;">
+<img src="https://gaston-fernandez.github.io/files/barros_MG_4817s2-min.jpg" style="max-width:35%;min-width:40px;float:right;"/>
+<a href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao" target="_blank" class="social-icon-link w-inline-block" style="text-decoration: none; float:right; ">
 <img src="https://uploads-ssl.webflow.com/6254cb9c7e543d3ead6005fe/6254cb9c7e543d4f296006a4_google-scholar.png" width="28" alt=""/>
 </a>	
-</div>
-</div>
+
+
 	  
 <div style="margin-right: 50px;">	  
 <h1>Gastón P. Fernández</h1>
