--- a/index.html
+++ b/index.html
@@ -39,15 +39,7 @@
     </nav>
 
 
-
-<div class="image-container" style="float: right; max-width: 35%; min-width: 40px;">
-    <img src="https://gaston-fernandez.github.io/files/barros_MG_4817s2-min.jpg" style="width: 100%;">
-</div>
-<div class="icon-container" style="float: right; clear: both;">
-    <a href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao" target="_blank" class="social-icon-link w-inline-block" style="text-decoration: none;">
-        <img src="https://uploads-ssl.webflow.com/6254cb9c7e543d3ead6005fe/6254cb9c7e543d4f296006a4_google-scholar.png" width="28" alt=""/>
-    </a>
-</div>
+<img src="https://gaston-fernandez.github.io/files/barros_MG_4817s2-min.jpg" style="max-width:35%;min-width:40px;float:right;"/>
 
 
 
