--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
 	  
-<div style="margin-right: 120px;">	  
+<div style="margin-right: 120px; text-align: justify;">	  
 <h1>Gastón P. Fernández</h1>
 
 	<p>
