--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
 
 
-	  
-<div style="margin-right: 120px; text-align: justify; padding-right: 50px;">	  
+<div style="text-align: justify; width: calc(100% - 120px - 30%); float: left;">	  	  
+
 <h1>Gastón P. Fernández</h1>
 
 	<p>
