--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
 
 
 
-<div style="text-align: justify; width: calc(100% - 120px - 30%); float: left;">	  	  
-
+  	  
+<div style="margin-right: 120px; text-align: justify;">	
 <h1>Gastón P. Fernández</h1>
 
+	<div style="text-align: justify; width: calc(100% - 120px - 30%); float: left;">	
 	<p>
 	I’m a Ph.D. student at the Economics Department of <span><b>KU Leuven</b></span>, Belgium. My advisors are <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><span><b>Laurens Cherchye</b></span></a> and <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><span><b>Frederic Vermeulen</b></span></a>. </p>
 	
@@ -60,8 +61,9 @@
 	<p> &#128231 Reach me here: <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></p></p>  
 
 	<p><a href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank" class="button-round-x w-button"><strong class="bold-text-3">Download CV ↓</strong></a>  </p> 
-</div>
 
+	</div>
+</div>
 </br>
 </br>
 </br>
