--- a/index.html
+++ b/index.html
@@ -42,12 +42,11 @@
 <img src="https://gaston-fernandez.github.io/files/barros_MG_4817s2-min.jpg" style="max-width:30%;min-width:40px;float:right;"/>
 
 
-
+<div style="clear: both;"></div>
   	  
 <div style="margin-right: 120px; text-align: justify;">	
 <h1>Gastón P. Fernández</h1>
 
-	<div style="text-align: justify; width: calc(100% - 120px - 30%); float: left;">	
 	<p>
 	I’m a Ph.D. student at the Economics Department of <span><b>KU Leuven</b></span>, Belgium. My advisors are <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><span><b>Laurens Cherchye</b></span></a> and <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><span><b>Frederic Vermeulen</b></span></a>. </p>
 	
@@ -62,7 +61,7 @@
 
 	<p><a href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank" class="button-round-x w-button"><strong class="bold-text-3">Download CV ↓</strong></a>  </p> 
 
-	</div>
+
 </div>
 </br>
 </br>
