--- a/index.html
+++ b/index.html
@@ -41,10 +41,8 @@
 
 <img src="https://gaston-fernandez.github.io/files/barros_MG_4817s2-min.jpg" style="max-width:30%;min-width:40px;float:right;"/>
 
-
-<div style="clear: both;"></div>
   	  
-<div style="margin-right: 120px; text-align: justify;">	
+<div style="margin-right: 1200px;">	
 <h1>Gastón P. Fernández</h1>
 
 	<p>
