--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     </nav>
 
 
-<img src="https://gaston-fernandez.github.io/files/barros_MG_4817s2-min.jpg" style="max-width:30%;min-width:40px;float:right;"/>
+<img src="https://gaston-fernandez.github.io/files/barros_MG_4817s2-min.jpg" style="max-width:33%;min-width:40px;float:right;"/>
 
   	  
-<div style="margin-right: 300px;">	
+<div style="margin-right: 300px; text-align: justify;">	
 <h1>Gastón P. Fernández</h1>
 
 	<p>
