--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <img src="https://gaston-fernandez.github.io/files/barros_MG_4817s2-min.jpg" style="max-width:33%;min-width:40px;float:right;"/>
 
   	  
-<div style="margin-right: 300px; text-align: justify;">	
+<div class="content-area">	
 <h1>Gastón P. Fernández</h1>
 
 	<p>
