--- a/research.html
+++ b/research.html
@@ -72,7 +72,8 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 <p> 	
 <strong>Does personality affect the allocation of resources within households?</strong><br>
 <em>Presented at: EALE 2023, EEA-ESEM 2023, ESPE 2023, TADC 2023, ECORES Summer School 2022 </em><br>
-<span style="font-size: 80%;">Status: <a class="two" href="https://feb.kuleuven.be/research/economics/ces/documents/DPS/DPS2023/dps%202311.pdf" target="_blank">working paper</a> · Submitted </span>
+<span style="font-size: 80%;"> <a href="javascript:void(0);" onclick="toggleAbstract('abstract3')">Abstract</a> · Status: <a class="two" href="https://feb.kuleuven.be/research/economics/ces/documents/DPS/DPS2023/dps%202311.pdf" target="_blank">working paper</a> · Submitted </span>
+<div id="abstract3" style="display:none; font-size: 80%;">This paper examines whether personality influences the allocation of resources within households. To do so, I model households as couples that make Pareto-efficient allocations and divide resources according to a distribution function. Using a sample of Dutch couples from the LISS survey with detailed information on consumption, labor supply, and personality traits at the individual level, I find that personality affects intrahousehold allocations through two channels. Firstly, the level of these traits act as preference factors that shape individual tastes for consumed goods and leisure time. Secondly, by testing distribution factor proportionality and the exclusion restriction of a conditional demand system, I observe that differences in personality between spouses act as distribution factors. Specifically, these differences in personality impact the allocation of resources by affecting the bargaining process within households. For example, women who are relatively more conscientious and engage more cognitively than their male partners receive a larger share of intrafamily resources.</div>	
 </p>
 <hr class="publication-divider">
 	
@@ -101,7 +102,8 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 <hr class="publication-divider">
 	
 <p> 	
-<strong>Parental personality and child skills formation</strong><br>
+<strong>Parental personality and child skills formation</strong><be>
+<em>Presented at: Tilburg Structural Econometrics Seminar 2024</em><br>
 <span style="font-size: 80%;">Status: draft soon </a> </span>
 </p>
 <hr class="publication-divider">
