--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
 
 
-<img src="https://gaston-fernandez.github.io/files/barros_MG_4817s2-min.jpg" style="max-width:33%;min-width:40px;float:right;"/>
+<img src="https://gaston-fernandez.github.io/files/barros_MG_4817s2-min.jpg" class="profile-img"/>
 
   	  
 <div class="content-area">	
