--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 <a href="https://www.linkedin.com/in/gastón-p-fernández-7ab217135/" target="_blank" class="social-icon-link w-inline-block" style="text-decoration: none;">
 <img src="https://uploads-ssl.webflow.com/6254cb9c7e543d3ead6005fe/6254cb9c7e543de964600631_linkedin.svg" width="30" alt="LinkedIn image" class="image-7"/>
 </a>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;              
+<!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;              
 <a href="https://github.com/gaston-fernandez" target="_blank" class="social-icon-link w-inline-block" style="text-decoration: none;">
 <img src="https://uploads-ssl.webflow.com/6254cb9c7e543d3ead6005fe/6254cb9c7e543d44db60067e_social-33.svg" width="28" alt=""/>
-</a>
+</a>-->
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="https://twitter.com/GastFernandezB" target="_blank" class="social-icon-link w-inline-block" style="text-decoration: none;">
 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="-3500px" width="40" height="40" viewBox="0,0,256,256">
