--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@ HOG 02.159
 </br>	
   <footer>
     <hr/>
-    © Gastón P. Fernández
+  © Gastón P. Fernández, 2024
   </footer>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YH28BD7JPP"></script>
