--- a/teaching.html
+++ b/teaching.html
@@ -60,7 +60,7 @@ Spring 2014 and Fall 2014
 
   <footer>
     <hr/>
-    © Gastón P. Fernández
+  © Gastón P. Fernández, 2024
   </footer>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YH28BD7JPP"></script>
