--- a/index.html
+++ b/index.html
@@ -86,11 +86,14 @@
       <img src="https://uploads-ssl.webflow.com/6254cb9c7e543d3ead6005fe/6254cb9c7e543de964600631_linkedin.svg" alt="LinkedIn icon"/>
     </a>
   </div>
-  <div class="icon-wrapper">
-    <a href="https://twitter.com/GastFernandezB" target="_blank" class="social-icon-link">
-      <!-- Inline SVG for Twitter icon goes here -->
-    </a>
-  </div>
+<div class="icon-wrapper">
+  <a href="https://twitter.com/GastFernandezB" target="_blank" class="social-icon-link">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="28" height="28" class="twitter-icon-svg">
+      <path d="M512 97.248c-19.04 8.352-39.328 13.888-60.48 16.416 21.76-13.056 38.368-33.696 46.176-58.496-20.368 12.096-42.944 20.832-66.784 25.568-19.2-20.448-46.56-33.248-76.672-33.248-57.984 0-105.088 47.104-105.088 105.088 0 8.32 0.928 16.416 2.784 24.192-87.296-4.384-164.704-46.08-216.48-109.44-9.024 15.488-14.176 33.568-14.176 52.928 0 36.544 18.624 68.832 46.912 87.744-17.28-0.544-33.536-5.312-47.648-13.216v1.312c0 51.008 36.352 93.504 84.608 103.136-8.864 2.4-18.208 3.68-27.872 3.68-6.848 0-13.504-0.672-19.968-1.92 13.6 42.336 52.992 73.12 99.584 73.92-36.496 28.672-82.368 45.728-132.224 45.728-8.608 0-17.056-0.512-25.344-1.472 47.168 30.256 103.136 47.936 163.136 47.936 195.872 0 303.04-162.304 303.04-303.04 0-4.64-0.112-9.216-0.288-13.728 20.832-15.072 38.912-33.856 53.152-55.296z"/>
+    </svg>
+  </a>
+</div>
+
 </div>
 
 </br>
