--- a/index.html
+++ b/index.html
@@ -68,8 +68,36 @@
 </br>
 </br>
 
+<div class="references-section">
+    <h2>References</h2>
+    <div class="reference">
+        <p>Grant r (Co-primary)</p>
+        <p>Health Policy, Stanford University</p>
+        <a href="mailto:ngmiller@stanford.edu">ngmillord.edu</a>
+    </div>
+    <div class="reference">
+        <p>s (Co-primary)</p>
+        <p>Economics, Stanford University</p>
+        <a href="mailto:avoena@stanford.edu">av@stanford.edu</a>
+    </div>
+    <div class="reference">
+        <p> Boom</p>
+        <p>Economics, Stanford University</p>
+        <a href="mailto:nbloom@stanford.edu">nblom@</a>
+    </div>
+    <div class="reference">
+        <p>Maya R-Slater</p>
+        <p>Health Policy, Stanford University</p>
+        <a href="mailto:mrossin@stanford.edu">@stanford.edu</a>
+    </div>
+</div>
+
+
+	  
 </br>
-  
+
+
+	  
 <div class="social-icons-container">
   <div class="icon-wrapper">
     <a href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao" target="_blank" class="social-icon-link">
