--- a/index.html
+++ b/index.html
@@ -70,27 +70,21 @@
 
 <div class="references-section">
     <h2>References</h2>
-    <div class="reference">
-        <p>Grant r (Co-primary)</p>
-        <p>Health Policy, Stanford University</p>
-        <a href="mailto:ngmiller@stanford.edu">ngmillord.edu</a>
-    </div>
-    <div class="reference">
-        <p>s (Co-primary)</p>
-        <p>Economics, Stanford University</p>
-        <a href="mailto:avoena@stanford.edu">av@stanford.edu</a>
-    </div>
-    <div class="reference">
-        <p> Boom</p>
-        <p>Economics, Stanford University</p>
-        <a href="mailto:nbloom@stanford.edu">nblom@</a>
-    </div>
-    <div class="reference">
-        <p>Maya R-Slater</p>
-        <p>Health Policy, Stanford University</p>
-        <a href="mailto:mrossin@stanford.edu">@stanford.edu</a>
+    <div class="reference-list">
+        <div class="reference">
+            <p>Grant  (Co-primary)</p>
+            <p>Health Policy,  University</p>
+            <a href="mailto:ngmiller@stanford.edu">ngmiller@</a>
+        </div>
+        <div class="reference">
+            <p>Alessandra  (Co-primary)</p>
+            <p>Economics,  University</p>
+            <a href="mailto:avoena@stanford.edu">ffffff</a>
+        </div>
+        <!-- Add more reference items here -->
     </div>
 </div>
+
 
 
 	  
