--- a/index.html
+++ b/index.html
@@ -64,30 +64,32 @@
 </br>
 </br>
 </br>
-</br>
-</br>
-</br>
+
 
 <div class="references-section">
     <h2>References</h2>
     <div class="reference-list">
         <div class="reference">
-            <p>test  (Co-primary)</p>
-            <p>Health Policy,  University</p>
-            <a href="mailto:ngmiller@stanford.edu">ngmiller@</a>
+            <p>Frederic Vermeulen</p>
+            <a href="mailto:frederic.vermeulen@kuleuven.be">frederic.vermeulen@kuleuven.be</a>
         </div>
         <div class="reference">
-            <p>Alessandra  (Co-primary)</p>
-            <p>Economics,  University</p>
-            <a href="mailto:avoena@stanford.edu">ffffff</a>
+            <p>Laurens Cherchye </p>
+            <a href="mailto:Laurens.Cherchye@kuleuven.be">laurens.cherchye@kuleuven.be</a>
         </div>
+        <div class="reference">
+            <p>Dirk Czarnitzki  </p>
+            <a href="mailto:dirk.czarnitzki@kuleuven.be">dirk.czarnitzki@kuleuven.be</a>
+        </div>    
         <!-- Add more reference items here -->
     </div>
 </div>
 
 
 
-	  
+</br>
+</br>
+</br>	  
 </br>
 
 
