--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<p>
 	Currently, I'm visiting the Department of Econometrics & Operations Research at <span><b>Tilburg University</b></span>.  </p>
 	 
-        <p> My research is in applied microeconomics with a special emphasis on the fields of <span><b>Family Economics</b></span> and <span><b>Human Capital Development</b></span>. I am also interested in studying the impact of <span><b>Technological Change</b></span> on labor markets and firms’ behavior.</p>
+        <p> My research is in applied microeconomics with a special emphasis on the fields of <span><b>Family Economics</b></span> and <span><b>Child Development</b></span>. I am also interested in studying the impact of <span><b>Technological Change</b></span> on labor markets and firms’ behavior.</p>
 
         <p>I will be on the <span><b>2024/2025 academic job market. </b></span></p>
 
