--- a/research.html
+++ b/research.html
@@ -104,7 +104,7 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 <hr class="publication-divider">
 	
 <p> 	
-<strong>Parental personality and child skills formation</strong><be>
+<strong>Parental personality and child skills formation</strong><br>
 <span style="color: red;"> <strong> [Job Market Paper]</strong></span><br>	
 <em>Presented at: Tilburg Structural Econometrics Seminar 2024</em><br>
 <span style="font-size: 80%;">Status: draft soon </a> </span>
