--- a/research.html
+++ b/research.html
@@ -72,7 +72,7 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 <p> 	
 <strong>Does personality affect the allocation of resources within households?</strong><br>
 <em>Presented at: EALE 2023, EEA-ESEM 2023, ESPE 2023, TADC 2023, ECORES Summer School 2022 </em><br>
-<span style="font-size: 80%;"> <a href="javascript:void(0);" onclick="toggleAbstract('abstract3')">Abstract</a> · <a class="two" href="https://feb.kuleuven.be/research/economics/ces/documents/DPS/DPS2023/dps%202311.pdf" target="_blank">Working paper</a> · Submitted </span>
+<span style="font-size: 80%;"> <a href="javascript:void(0);" onclick="toggleAbstract('abstract3')">Abstract</a> · <a class="two" href="https://feb.kuleuven.be/research/economics/ces/documents/DPS/DPS2023/dps%202311.pdf" target="_blank">Working paper</a> · <strong>Submitted</strong> </span>
 <div id="abstract3" style="display:none; font-size: 80%;">This paper examines whether personality influences the allocation of resources within households. To do so, I model households as couples that make Pareto-efficient allocations and divide resources according to a distribution function. Using a sample of Dutch couples from the LISS survey with detailed information on consumption, labor supply, and personality traits at the individual level, I find that personality affects intrahousehold allocations through two channels. Firstly, the level of these traits act as preference factors that shape individual tastes for consumed goods and leisure time. Secondly, by testing distribution factor proportionality and the exclusion restriction of a conditional demand system, I observe that differences in personality between spouses act as distribution factors. Specifically, these differences in personality impact the allocation of resources by affecting the bargaining process within households. For example, women who are relatively more conscientious and engage more cognitively than their male partners receive a larger share of intrafamily resources.</div>	
 </p>
 <hr class="publication-divider">
@@ -81,7 +81,7 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 <strong>Evidence on the adoption of artificial intelligence: the role of skills shortage in German firms</strong><br>
 Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00144520" target="_blank">Paolo Carioli</a> <br>	
 <em>Presented at: CISS 2023  </em><br>
-<span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract4')">Abstract</a> · <a class="two" href="/files/MSI_2402.pdf" target="_blank">Working paper</a> · Submitted </span>
+<span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract4')">Abstract</a> · <a class="two" href="/files/MSI_2402.pdf" target="_blank">Working paper</a> · <strong>Submitted</strong> </span>
 <div id="abstract4" style="display:none; font-size: 80%;">Artificial Intelligence (AI) is considered to be the next general-purpose technology, with the potential of performing tasks commonly requiring human capabilities. While it is commonly feared that AI replaces labor and disrupts jobs, we instead investigate the potential of AI for overcoming increasingly alarming skills shortages in firms. We exploit unique German survey data from the Mannheim Innovation Panel on both the adoption of AI and the extent to which firms experience scarcity of skills. We measure skills shortage by the number of job vacancies that could not be filled as planned by firms, distinguishing among different types of skills. To account for the potential endogeneity of skills shortage, we also implement instrumental variable estimators. Overall, we find a positive and significant effect of skills shortage on AI adoption, the breadth of AI methods, and the breadth of areas of application of AI. In addition, we find evidence that scarcity of labor with academic education relates to firms exploring and adopting AI.</div>	
 </p>
 <hr class="publication-divider">
@@ -105,7 +105,7 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 	
 <p> 	
 <strong>Parental personality and child skills formation</strong><br>
-<span style="color: olive;"> <strong> [Job Market Paper]</strong></span><br>	
+<span style="color: silver;"> <strong> [Job Market Paper]</strong></span><br>	
 <em>Presented at: Tilburg Structural Econometrics Seminar 2024</em><br>
 <span style="font-size: 80%;">Draft soon </a> </span>
 </p>
