--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,8 @@ HOG 02.159
 
 <p>
 <strong> E-mail address:</strong> <br>
-<a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a>
+<a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a><br>
+<a href="mailto:g.fernandez@tilburguniversity.edu">g.fernandez@tilburguniversity.edu</a><br>
 </p>	
 </br>
 </br>
