--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@ HOG 02.159
 </p>	
 
 <p>
-<strong> E-mail address:</strong> <br>
+<strong> E-mail addresses:</strong> <br>
 <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a><br>
 <a href="mailto:g.fernandez@tilburguniversity.edu">g.fernandez@tilburguniversity.edu</a><br>
 </p>	
