--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
         
         <a style="margin: 0 0 0 0" href="https://x.com/GastFernandezB" target="_blank">
-          <i class="fa-brands fa-x-twitter"></i>
-        </a>
+	  <i class="fa-brands fa-square-x-twitter"></i>        
+	</a>
         
 </div>
 	  
