--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         
         <a style="margin: 0 0 0 0" href="https://x.com/GastFernandezB" target="_blank">
-	  <i class="fa-brands fa-square-x-twitter"></i>        
+	  <i class="fab fa-twitter"></i>
 	</a>
         
 </div>
