--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <p><span><b>I will be on the 2024/2025 academic job market. </b></span></p>
 
-	<p> &#128231 Contact me here: <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></p></p>  
+	<p>Contact: <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></p></p>  
 
 	<!-- <p><a href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank" class="button-round-x w-button"><strong class="bold-text-3">Download CV </strong></a>  </p> -->
 
