--- a/index.html
+++ b/index.html
@@ -97,7 +97,12 @@
 
 </br>
 
-
+<ul>
+<h1>References</h1>
+  <li><p>Frederic Vermeulen</p></li>
+  <li>Green</li>
+  <li>Blue</li>
+</ul>
 	  
 <div class="references-section">
     <h2>References</h2>
